style.css
:root {
  --primary-color: #658;
}

* {
  padding: 0;
  margin: 0;
  color: #111;

  font-family: 'Helvetica Neue', sans-serif;
}
html {
  background-color: #ddd;

  background-size: 10px 10px;
  background-position: 0 0, 5px 5px;
  background-repeat: repeat;
}

.cover {
  z-index: 0;
  height: 100vh;
  width: 100%;
}
.a4-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-items: center;
  align-items: center;
  height: 100vh;
}
.left {
  display: block;
  min-width: 6vw;
}
.right {
  display: block;
  /* min-width: 10vw; */
}

.a4 {
  z-index: 100;
  background: #fff;
  margin: 9em 0em 18em 0em;
  /*  */
  width: 57rem;
  aspect-ratio: 1 / 1.4;

  /* box-shadow: 20px 13px 30px #0002; */

  position: relative;
}
.a4::after {
  content: 'Designed by Vahan Sahakyan';
  position: absolute;
  bottom: -2.5rem;
  left: 50%;
  transform: translateX(-50%);
  color: #aaa;
}

.ln-svg,
.gh-svg {
  fill: #777;
  cursor: pointer;
}
.ln-svg:hover {
  fill: #0b65c2;
}
.gh-svg:hover {
  fill: #2e3741;
}

.hidden {
  display: none;
}

.sticker {
  z-index: 200;
  position: absolute;
  height: 95px;
  /* width: 195px; */
  /* top: 70px; */
  bottom: -45px;
  left: -50px;
  border: 1px solid #0006;
  border-radius: 4px;
  background-color: var(--primary-color);
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px);
  box-shadow: 10px 5px 7px #0001;
  /*  */
  box-sizing: border-box;
  line-height: 30px;
  padding: 35px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}
li a:hover {
  outline: none;
  border: 1px solid #0006;
}
li a:active span,
li a:active {
  /* opacity: 0.9; */
  opacity: 0.9;
  /* color: #555; */
}
li a,
li a:active {
  box-shadow: none;
  transform: unset;
  transition: 70ms;
  border: 1px solid #0003;
  border-radius: 4px;
  background-color: var(--primary-color);
  padding: 0 1.6rem;
  text-decoration: none;
  cursor: pointer;
}

.phone,
.email {
  cursor: pointer;
  color: #222;

  font-family: 'Helvetica Neue', sans-serif;
  font-weight: bold;
  font-size: 1.2rem;
  flex: 1;
  opacity: 0.8;
}
.phone:hover,
.email:hover {
  opacity: 1;
}
.phone:active,
.email:active {
  opacity: 0.6;
}
/* .phone {
  flex: 1;
}
.email {
  flex: 1;
} */

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.avatar,
.full-name {
  flex: 1 1 1;
}
.avatar {
  margin-right: 1rem;
  margin-bottom: 0rem;
  z-index: 200;
  border-radius: 8px;
  height: 140px;
  width: 140px;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  box-shadow: 10px 5px 14px #0004;

  /* background-image: url('./img/avatarShot2.png'); */
  background: url('./img/avatarShot2.jpeg');
  /* background-repeat: no-repeat; */
  background-size: 103%;
}

.full-name {
  font-family: 'Rubik', Sans-Serif;

  font-family: 'Helvetica Neue', sans-serif;
  font-weight: bold;

  margin-left: 20px;
  margin-bottom: 14px;
  font-weight: 300;
  font-size: 2.8rem;
  line-height: 1em;
}
.full-name span {
  font-weight: 300;
  font-family: 'Rubik', Sans-Serif;

  font-family: 'Helvetica Neue', sans-serif;

  padding: 0px;
}
.profession {
  font-family: 'Helvetica Neue', sans-serif;
  height: 30px;
  margin-bottom: 0;
  margin-left: 18px;
  padding: 0 20px;
  width: fit-content;
  font-size: 1.2rem;
  color: #ffffff;
  background-color: var(--primary-color);

  line-height: 1.5em;
}

.profession:before {
  z-index: 1;
  /* content: ''; */
  position: absolute;
  bottom: 0;
  left: 99%;
  width: 8px;
  height: 0;
  border-top: 30px solid var(--primary-color);
  border-right: 1.6em solid transparent;
}

.title {
  position: relative;
}

h1,
h2,
h3,
h4 {
  font-family: 'Helvetica Neue', sans-serif;
  font-weight: bold;
}

h2 {
  font-weight: 600;
  /* margin-bottom: 20px; */
  margin-bottom: 10px;
  letter-spacing: 0.3rem;
}
h3 {
  font-size: 1.1rem;
  font-weight: 600;
  margin-bottom: 5px;
  letter-spacing: 0.2rem;
}
h4 {
  font-size: 0.8rem;
  font-weight: 600;
  margin-bottom: 5px;
}
.education section {
  margin-bottom: 1.5rem;
}
.education section div {
  margin-bottom: 12px;
}
.education h5 {
  position: relative;
  display: inline-block;
  z-index: 2 !important;
}
.education h5:after {
  z-index: -1 !important;
  content: '';
  height: 6px;
  width: 115%;
  background-color: var(--primary-color);
  opacity: 0.15;
  position: absolute;
  bottom: 1px;
  left: -6px;
}
strong {
  opacity: 0.9;
}
h6 {
  color: var(--primary-color);
  font-size: 12px;
  /* opacity: 0.7; */
}

.job-info {
  display: flex;
  align-items: center;
  justify-content: start;
  gap: 2em;
  opacity: 0.7;
  margin-bottom: 4px;
}
.job-info > * {
  margin: 0;
}

hr {
  border: none;
  height: 2px;
  background-color: #ddd;
}

h3.experience-name {
  position: relative;
  display: inline-block;
  margin-top: 0px;
  margin-bottom: 2px;
  z-index: 2 !important;
}
.experience-name:after {
  z-index: -1 !important;
  content: '';
  height: 8px;
  width: 115%;
  background-color: var(--primary-color);
  opacity: 0.15;
  position: absolute;
  bottom: 1px;
  left: -6px;
}

ul {
  padding-left: 1em;
  /* margin-bottom: 40px; */
  margin-bottom: 20px;
}
p {
  color: #777;
  color: #444;
  font-size: 0.9rem;
}

li {
  color: #777;
  color: #444;

  font-size: 0.9rem;
  padding-left: 6px;
}
.experience li {
  list-style: '>>';
}
li strong {
  font-family: 'Helvetica Neue', sans-serif;
  font-weight: bold;
  color: #444;
}

.project-cta {
  display: flex;
  justify-content: start;
  flex-direction: row-reverse;
  gap: 0.5rem;
  margin-top: -1em;
  margin-left: -1.5em;
}

.project-cta a:last-child {
  padding: 0 0.5rem;
}
.project-cta a:hover .code-expand-icon-show,
.project-cta a .code-expand-icon-hide {
  display: inline-block;
}
.project-cta a:hover .code-expand-icon-hide,
.project-cta a .code-expand-icon-show {
  display: none;
}
.project-cta span {
  display: flex;
  gap: 0.5rem;
}
.code-expand-icon-hide,
.code-expand-icon-show {
  height: 18px;
  opacity: 0.6;
  color: #0001;
}
footer {
  height: 0px;
}

.a4 .wrapper {
  padding: 60px 50px;
  overflow: hidden;
}

.a4 header {
  /* background-color: darkgray; */
  margin-bottom: 40px;
  letter-spacing: 0.3rem;
}

.a4 .content-wrapper {
  /* background-color: darkgray; */
  display: flex;
}

.a4 .content-wrapper aside {
  padding: 0 15px 0 20px;
  flex: 3.9;
}
.a4 .content-wrapper .content {
  border-left: 2px solid #ddd;
  padding: 0 20px;
  flex: 7.5;
}
.a4 .content-wrapper aside ul {
  margin-bottom: 1.5em;
}
.a4 .content-wrapper aside ul > ul {
  margin-bottom: 0;
  list-style: disc;
}
.a4 .content-wrapper aside li {
  margin-bottom: 5px;
}
.a4 .content-wrapper aside h2 {
  margin-bottom: 1rem;
}
.a4 .content-wrapper aside h3 {
  margin-top: 20px;
}
.a4 .content-wrapper .content ul:last-child {
  margin-bottom: 0;
}

.skills h2 {
  margin-bottom: 0.2rem;
}
.skills h3 {
  margin-bottom: 1.2rem;
}

#download svg {
  width: 2em;
  stroke: #666;
}
#download span {
  color: #666;
}
#download:hover svg,
#download:hover span {
  filter: brightness(50%);
}

#download {
  z-index: 9999;
  display: flex;
  align-items: center;
  gap: 1.25em;
  width: 10em;

  background-color: #fffa;
  /* border-radius: 10% / 1.5%; */
  backdrop-filter: blur(8px);
  -webkit-backdrop-filter: blur(8px);
  box-shadow: 10px 10px 25px #0002;

  border-radius: 10000px;

  text-decoration: none;
  position: fixed;
  padding: 0.5em 1.5em;
  left: 50%;
  top: 3em;
  transform: translate(-50%);
}
#download:active {
  opacity: 0.7;
}

section.pdf-mode-contacts {
  display: none;
}
.cursor-pointer {
  cursor: pointer;
}

